2002-11-04  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/ly2dvi.py: Fix: redirect latex progress/error output to
	stderr (by default this goes to stdout).  Show lilypond progress,
	even when not verbose.  Ugh.

	* scm/backend-documentation-lib.scm (check-dangling-properties):
	Fix error message.

	* lily/text-item.cc (ADD_INTERFACE): Remove align, magnify.  Add
	axis, extent.

	* scm/grob-property-description.scm (magnify): Remove.
	(extent, axis): Add.

2002-11-03  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scripts/convert-ly.py: more uniformization substitutions.

	* buildscripts/new-chords.py (sub_chords): new file.

2002-11-03  Jan Nieuwenhuizen  <janneke@gnu.org>

	* mf/GNUmakefile: Bugfix: Use actual fontname (.AFM FontName) for
	lilypond.map.  Include sauter fonts too.  Cleanups.

2002-11-02  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/user/tutorial.itely (First steps): change to new
	chord/tie/slur/beam notation.

	* lily/parser.yy (event_that_take_dir): allow postfix notation for
	ties.

	* lily/new-tie-engraver.cc (process_acknowledged_grobs): new
	engraver. Process ties in postfix notation, i.e. c8-~ c

	* lilypond-mode.el (LilyPond-command-alist): run LaTeX by default.

	* input/regression/beam-postfix-notation.ly (texidoc): new file.

	* lily/parser.yy (event_that_take_dir): allows c8-[ for beams.

	* lily/beam-engraver.cc (try_music): accept new-beam-events

	* input/regression/chord-scripts.ly (texidoc): new file

	* lily/new-fingering-engraver.cc (acknowledge_grob):  also handle
	script-events.

	* scm/script.scm (default-script-alist): cleanup.

	* lily/script-engraver.cc (make_script_from_event): cleanup.

	* lily/lyric-combine-music-iterator.cc
	(Lyric_combine_music_iterator): remove superfluous events.
	(melisma_busy): new function. Fix broken melismas.

2002-10-31  Heikki Junes  <hjunes@cc.hut.fi>

	* vimrc: Add shortcuts for compiling, midi-playing and PS-viewing.
	Remove nonvalid settings. Use descriptive key names.