@@ -1,8 +1,12 @@
 2002-11-04  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* scripts/lilypond-book.py:
 	* scripts/ly2dvi.py: Fix: redirect latex progress/error output to
 	stderr (by default this goes to stdout).  Show lilypond progress,
-	even when not verbose.  Ugh.
+	even when not verbose.
+
+	* python/lilylib.py (system): New optional parameter to control
+	showing of progress.
 
 	* scm/backend-documentation-lib.scm (check-dangling-properties):
 	Fix error message.
